--- a/css/styles.css
+++ b/css/styles.css
@@ -740,7 +740,7 @@ svg {
   }
 
   .navigation-list {
-    width: 14rem;
+    width: 13rem;
     margin-top: 0.5rem;
   }
 
@@ -1012,7 +1012,7 @@ approach-item-six .image p {
   width: 15rem;
 }
 
-.approach-items-seven-eight, .img-eight {
+.approach-items-seven-eight, #img-eight {
   margin-top: 4rem;
 }
 
@@ -1027,9 +1027,13 @@ approach-item-six .image p {
   height: 2rem;
 }
 
-.approach-img-twentythree, .img-four  {
+.approach-img-twentythree  {
   width: 80%;
   height: 3rem;
+}
+
+#img-four {
+  width: 16rem;
 }
 
  .approach-img-twenty, .approach-img-twentytwo {
@@ -1037,7 +1041,7 @@ approach-item-six .image p {
   height: 4.5rem;
 }
 
-.img-eight {
+#img-eight {
   width: 90%;
   height: 4.5rem;
 }
@@ -1046,16 +1050,16 @@ approach-item-six .image p {
   margin-top: 5rem;
 }
 
-.approach-img-eleven, .approach-img-fourteen, .approach-img-thirtyone, .approach-img-thirtytwo,  .approach-img-thirtynine {
+#approach-img-eleven, .approach-img-fourteen, .approach-img-thirtyone, .approach-img-thirtytwo,  .approach-img-thirtynine {
   width: 80%;
   height: 5.5rem;
 }
 
-.approach-img-eleven {
+#approach-img-eleven {
   height: 2.5rem;
 }
 
-.img-seven {
+#img-seven {
   width: 90%;
   height: 10.5rem;
 }
@@ -1071,13 +1075,17 @@ approach-item-six .image p {
   margin-bottom: 3.5rem;
 }
 
+.approach-imgs-seven-eight .image p, .approach-imgs-twelve-thirteen .image p {
+  margin-bottom: 3rem;
+}
+
  .approach-imgs-twelve-thirteen .image img {
   width: 14rem;
   margin-top: 1.75rem;
  }
 
 .approach-img-twentyseven, .approach-img-twentyeight, .cs-img-container-fifty, .approach-img-twentyone, .approach-img-twentyfour,
-.img-twelve {
+#img-twelve {
   width: 80%;
 }
 
@@ -1086,7 +1094,7 @@ approach-item-six .image p {
 }
 
 
-.img-five {
+#img-five {
   width: 80%;
   height: 4rem;
 }
@@ -1101,7 +1109,7 @@ approach-item-six .image p {
   height: 10rem;
 }
 
-  .approach-img-one img,  .overview .image img, .approach-img-six, .img-seven, .img-eight  {
+  .approach-img-one img,  .overview .image img, #approach-img-six, #img-seven, #img-eight  {
     width: 16rem;
   }
 
@@ -1159,7 +1167,7 @@ approach-item-six .image p {
   .navigation-list {
     margin: 2rem;
     padding: 0rem;
-    width: 14rem;
+    width: 13rem;
     margin-left: 3rem;
     margin-top: 1.5rem;
   }
@@ -1318,7 +1326,7 @@ approach-item-six .image p {
     height: 5%;
   }
 
-  .img-four {
+  #img-four {
     height: 8rem;
   }
 
@@ -1394,7 +1402,7 @@ approach-item-six .image p {
   margin: 2rem 2rem 0.5rem 2rem;
 } 
 
-.img-five {
+#img-five {
   margin: 0rem 2rem;
   font-size: 0.85rem;
 }
@@ -1548,7 +1556,7 @@ main {
   width: 12rem;
 }
 
-.project-six .project .MagicThumb img {
+.project-six .project .MagicThumb img, .overview .image .MagicThumb {
   width: 80%;
 }
 
@@ -1595,19 +1603,30 @@ main {
   font-size: 1rem;
 }
 
-.img-twelve, .approach-img-eleven, .approach-img-ten, .approach-img-nine, .img-eight, .img-seven, .approach-img-six, 
-.img-five, .img-three, .api-vs-fetchcomp, .approach-img-twentysix, .img-four, .img-two {
+#img-twelve, #approach-img-eleven, #approach-img-ten, #approach-img-nine, #img-eight, #img-seven, #approach-img-six, 
+#img-five, #img-three, #api-vs-fetchcomp, #approach-img-twentysix, #img-four, #img-two {
   width: 20rem;
 }
 
-.approach-img-one p, .approach-item-six .image p, .approach-imgs-three-five .image p, 
+.approach-item-six .image p, .approach-imgs-three-five .image p, 
 .approach-imgs-seven-eight .image p, .approach-imgs-nine-eleven p, .approach-imgs-tweleve-thirteen .image p {
   margin: 0rem 2rem;
   font-size: 0.85rem;
 }
 
+
+
+.approach-imgs-three-five .image p {
+  margin-bottom: 1rem;
+}
+
+.approach-img-one p {
+  margin: 0rem 2.5rem;
+  font-size: 0.85rem;
+}
+
 .approach-img-two p {
-  margin: 0rem 1rem;
+  margin: 0rem 2.25rem;
   font-size: 0.85rem;
 }
 
@@ -1622,17 +1641,29 @@ main {
   margin: auto;
 }
 
-.approach-item-two p, .approach-items-three-five p, .approach-item-six p, .approach-items-nine-eleven p,
-.approach-img-two p, .approach-items-twelve-thirteen p, .wrap-up p {
+.approach-item-two p, .approach-item-six p, .approach-items-nine-eleven p,
+ .approach-items-twelve-thirteen p, .wrap-up p {
   margin: 4rem 2rem 0rem 2rem;
+}
+
+.approach-imgs-seven-eight .image p, .approach-items-nine-eleven p, .approach-imgs-nine-eleven p {
+  margin-bottom: 1rem;
+}
+
+.approach-items-three-five p {
+  margin-bottom: 1rem;
+}
+
+.approach-imgs-twelve-thirteen .image p {
+  margin: 0rem 1rem 1rem 1rem;
 }
 
 .approach-items-twelve-thirteen p,  .wrap-up p {
   font-size: 1rem;
 }
 
-.img-five {
-  width: 19rem;
+#img-five {
+  width: 20rem;
 }
 
 .tools, .approach-intro, .approach-item-one, .approach-img-one, .approach-item-two, .approach-img-two, .approach-items-three-five, 
@@ -1643,7 +1674,11 @@ main {
   margin-right: 0rem;
 }
 
-.approach-img-six, .img-seven, .img-eight, .approach-img-nine, .approach-img-ten, .approach-img-eleven, .img-twelve,
+.approach-imgs-seven-eight {
+  margin-top: 1rem;
+}
+
+#approach-img-six, #img-seven, #img-eight, #approach-img-nine, #approach-img-ten, #approach-img-eleven, #img-twelve,
  .approach-img-twelvesix {
   margin-top: 0.5rem;
 }
@@ -1836,7 +1871,7 @@ main {
   }
 
   .approach-imgs-three-five {
-    margin-left: 0rem;
+    margin-left: 2rem;
   }
 
   #project-five .buttons {
@@ -1895,15 +1930,24 @@ main {
     font-size: 0.7rem;
   }
 
+
   .approach-imgs-three-five .image p  {
-    margin: 0rem 0rem;
+    margin: 0rem 0.5rem;
     font-size: 0.7rem;
-    margin-left: 4rem;
+    margin-bottom: 1rem;
+  }
+
+  #img-four, #img-five {
+    width: 21.5rem;
   }
   
   #localStorage .image p, .approach-imgs-seven-eight .image p {
     font-size: 0.7rem;
     margin: 0rem 2rem;
+  }
+
+  .approach-imgs-seven-eight .image p {
+    margin-bottom: 1rem;
   }
 
   .approach-imgs-nine-eleven p, .approach-imgs-twelve-thirteen .image p {
@@ -1916,11 +1960,11 @@ main {
     font-size: 1.75rem;
   }
   
-  .approach-img-nine, .approach-imgs-twelve-thirteen .image img {
+  #approach-img-nine, .approach-imgs-twelve-thirteen .image img {
     width: 20rem;
   }
 
-  .img-eight {
+  #img-eight {
     margin-top: 1rem;
   }
   
@@ -1942,31 +1986,17 @@ main {
   
 
   
-  .approach-img-twentythree, .img-four  {
+  .approach-img-twentythree  {
     width: 80%;
     height: 3rem;
   }
   
- 
-  
 
-  
   .approach-img-fifteen {
     width: 80%;
     height: 7.5rem;
   }
   
-   
-  
-
-  
-  
-  
-  
-  .img-five {
-    width: 80%;
-    height: 4rem;
-  }
   
   .user-display, .sixnine {
     width: 80%;
@@ -2025,18 +2055,22 @@ main {
     height: 10rem;
   }
   
-  .approach-img-one img, .approach-items-nine-eleven img, .img-two, .approach-imgs-three-five, .approach-img-ten,
-  .approach-img-ten, .approach-img-eleven, .img-seven, .img-eight, .approach-img-fourteen, .approach-img-fifteen,
+  .approach-img-one img, .approach-items-nine-eleven img, #img-two, #img-three, .approach-imgs-three-five, #approach-img-ten,
+  #approach-img-eleven, #img-seven, #img-eight, .approach-img-fourteen, .approach-img-fifteen,
   .approach-items-seventeen, .eightnine, .approach-img-twenty, .approach-img-twentyone, .approach-img-twentytwo, .approach-img-twentythree, 
-  .approach-img-twentyfour, .img-twelve, .img-thirteen, .approach-img-twentyseven, .approach-img-twentyeight,
-  .img-four, .img-five, .approach-img-thirtyone, .approach-img-thirtytwo, .approach-img-six,
+  .approach-img-twentyfour, #img-twelve, .img-thirteen, .approach-img-twentyseven, .approach-img-twentyeight,
+  .approach-img-thirtyone, .approach-img-thirtytwo, #approach-img-six,
   .approach-img-thirtyfour, .approach-img-thirtyfive, .approach-img-thirtysix, .approach-img-thirtyseven, .approach-img-thirtyeight,
   .approach-img-thirtynine, .approach-img-forty, .approach-img-fortyone {
     width: 85%;
   }
 
-  .img-three, .img-four, .img-five {
-    width: 100%;
+
+
+ 
+
+   #img-three {
+    width: 95%;
     margin-left: 2rem;
   }
   
@@ -2299,7 +2333,7 @@ main {
     width: 11rem;
   }
 
-  .img-four, .img-five {
+  #img-four, #img-five {
     margin-top: 1rem;
   }
 
@@ -2493,11 +2527,11 @@ textarea {
 
 
 .overview .image img, .approach-img-one img, .approach-items-nine-eleven img, .cs-img-container-seventy, #cs-img-container-seventy,
-.approach-three, .img-two, .approach-imgs-three-five, .img-three, .approach-imgs-seven-eight, .approach-img-fourteen, .approach-img-fifteen,
+.approach-three, #img-two, .approach-imgs-three-five, #img-three, .approach-imgs-seven-eight, .approach-img-fourteen, .approach-img-fifteen,
 .eightnine, .approach-img-seventeen, .approach-img-twenty, .approach-items-twentyone, .approach-img-twentyone, .approach-img-twentytwo,
-.approach-img-twentythree, .approach-items-twentyfour, .approach-img-twentyfour, .approach-items-twentyfive, .img-twelve,
-.img-thirteen, .approach-img-twentyseven, .approach-img-twentyeight, .approach-items-twentynine, .img-four,
-.img-five, .approach-items-thirtyone, .approach-img-thirtyone, .approach-img-thirtytwo, .approach-img-six,
+.approach-img-twentythree, .approach-items-twentyfour, .approach-img-twentyfour, .approach-items-twentyfive, #img-twelve,
+.img-thirteen, .approach-img-twentyseven, .approach-img-twentyeight, .approach-items-twentynine, #img-four,
+#img-five, .approach-items-thirtyone, .approach-img-thirtyone, .approach-img-thirtytwo, #approach-img-six,
 .approach-img-thirtyfour, .approach-img-thirtyfive, .approach-img-thirtysix, .approach-items-thirtysix, .approach-items-thirtyseven,
 .approach-img-thirtyseven, .approach-img-thirtyeight, .approach-img-thirtynine, .approach-items-forty, .approach-img-forty, 
 .approach-item-fortyone, .approach-img-fortyone {
@@ -2516,20 +2550,16 @@ textarea {
   margin-top: 0rem;
 }
 
-.approach-item-six, .approach-img-eleven,
-.approach-items-fourteen, .approach-items-sixteen, .approach-items-seventeen, .approach-img-sixteen {
+.approach-item-six, #approach-img-eleven,
+.approach-items-fourteen, .approach-items-sixteen, .approach-items-seventeen, approach-img-sixteen {
   width: 42rem;
 }
 
-
-
-
-
-.img-eight {
+#img-eight {
   width: 37rem;
 }
 
-.img-seven {
+#img-seven {
   width: 37rem;
   margin-left: 0rem;
 }
@@ -2552,7 +2582,7 @@ textarea {
   width: 50%;
 }
 
-.img-two {
+#img-two {
   height: 6rem;
 }
 
@@ -2563,7 +2593,7 @@ textarea {
   margin-top: 0rem;
 }
 
-.approach-imgs-three-five, .img-three, .approach-img-forty {
+.approach-imgs-three-five, #img-three, .approach-img-forty {
   height: 4rem;
 }
 
@@ -2572,11 +2602,11 @@ textarea {
   margin-bottom: 32rem;
 }
 
-.approach-img-twentysix {
+#approach-img-twentysix {
   width: 90%;
 }
 
-.approach-img-nine, .approach-img-ten, .approach-img-eleven {
+#approach-img-nine, #approach-img-ten, #approach-img-eleven {
   width: 95%;
 }
 
@@ -2596,7 +2626,7 @@ textarea {
   height: 13rem;
 }
 
-.approach-img-eleven {
+#approach-img-eleven {
   height: 6rem;
 }
 
@@ -2611,7 +2641,7 @@ textarea {
   margin: 4rem 0rem;
 }
 
-.approach-img-fourteen, .img-twelve, .approach-img-thirtyfour {
+.approach-img-fourteen, #img-twelve, .approach-img-thirtyfour {
   height: 21rem;
 }
 
@@ -2631,22 +2661,22 @@ textarea {
   height: 16rem;
 }
 
-.approach-items-twentyone, .approach-items-twentyfive, img-four, .img-five,
+.approach-items-twentyone, .approach-items-twentyfive, #img-four, #img-five,
 .approach-items-twentynine, .approach-items-thirtyone, .approach-items-thirtysix, .approach-items-thirtyseven, .approach-items-forty,
 .approach-item-fortyone, .approach-img-fortyone {
   margin: auto;
 }
 
-.img-four {
+#img-four {
   height: 9rem;
 }
 
-.approach-img-six .image img {
+#approach-img-six .image img {
   height: 23rem;
   margin-top: 3rem;
 }
 
-.img-twelve {
+#img-twelve {
   height: 26rem;
   width: 33rem;
 }
@@ -2847,7 +2877,7 @@ svg {
   margin: auto;
 }
 
-.approach-img-ten, .approach-img-eleven {
+#approach-img-ten, #approach-img-eleven {
   margin-top: 1rem;
 }
 
@@ -3115,11 +3145,11 @@ svg {
 
 
 .overview, .overview .image img, .purpose, .objectives, .tools, .approach-intro, .approach-item-one, .approach-item-two, .cs-img-container-seventy,
-#cs-img-container-seventy, .logindisplays, .approach-three, .approach-imgs-seven-eight, .approach-img-ten, .approach-img-ten,
-.approach-img-eleven, .img-seven, .approach-items-sixteen, .approach-items-seventeen,
+#cs-img-container-seventy, .logindisplays, .approach-three, .approach-imgs-seven-eight, #approach-img-ten,
+#approach-img-eleven, #img-seven, .approach-items-sixteen, .approach-items-seventeen,
 .approach-items-twentyone, .approach-items-twentyone .image img, .approach-items-twentyfive, .approach-items-twentyfive .image img,
 .approach-items-thirtyone, .approach-items-thirtyone .image img, .approach-items-thirtyseven, .approach-items-thirtyseven img,
-.api-vs-fetchcomp, .approach-items-nine-eleven img, .approach-items-three-five, .approach-img-one, .approach-items-nine-eleven, .approach-item-six,
+#api-vs-fetchcomp, .approach-items-nine-eleven img, .approach-items-three-five, .approach-img-one, .approach-items-nine-eleven, .approach-item-six,
  .approach-items-fourteen, .logindisplaynumbers, .approach-items-fourteen .image img,
 .approach-img-sixteen, .eightnine, .user-dialogs img, .approach-items-twentyfour, .approach-img-twentyfour, .approach-items-twentynine,
 .approach-items-twentynine .image img, .approach-img-thirtysix, .approach-items-thirtysix, .approach-items-forty,
@@ -3133,13 +3163,17 @@ svg {
   margin: 0rem 4rem;
 }
 
-.img-two,  .img-four, .img-five {
+#img-two {
   width: 85%;
   justify-self: center;
   height: 8rem;
 }
 
-.img-three {
+#img-four, #img-five {
+  width: 54rem;
+}
+
+#img-three {
   width: 85%;
   height: 6rem;
 }
@@ -3250,7 +3284,7 @@ img {
   width: 100%;
 }
 
-.img-eight {
+#img-eight {
   margin-top: 1rem;
 }
 
@@ -3264,7 +3298,7 @@ img {
   margin-bottom: 0rem;
 }
 
-.api-vs-fetchcomp {
+#api-vs-fetchcomp {
   height: 35rem;
 }
 
@@ -3811,19 +3845,19 @@ textarea {
       margin-bottom: 11rem;
   }
 
-  .overview .image img, .api-vs-fetchcomp, .approach-items-nine-eleven img, .cs-img-container-seventy, .apparoach-img-three img,
+  .overview .image img, #api-vs-fetchcomp, .approach-items-nine-eleven img, .cs-img-container-seventy, .apparoach-img-three img,
   .approach-items-nine-eleven img,  .approach-img-eigh, .approach-img-fourteen, .approach-img-fifteen,
-  .approach-imgs-three-five, .img-three, .approach-img-ten, .approach-img-ten, .img-seven, .img-eight,
+  .approach-imgs-three-five, #img-three, #approach-img-ten, #img-seven, #img-eight,
   .approach-items-seventeen, .eightnine, .approach-img-seventeen, .approach-img-twenty, .approach-img-twentyfour, .approach-img-twentyone,
-  .approach-img-twentytwo, .approach-items-twentyfour, .approach-img-twentythree, .img-twelve,
+  .approach-img-twentytwo, .approach-items-twentyfour, .approach-img-twentythree, #img-twelve,
  .img-thirteen, .approach-items-twentynine, .approach-img-twentyseven, .approach-img-twentyeight,
-  .approach-img-thirtyone, .approach-img-thirtysix, .approach-img-thirtytwo, .approach-img-six, .approach-img-thirtyfour,
+  .approach-img-thirtyone, .approach-img-thirtysix, .approach-img-thirtytwo, #approach-img-six, .approach-img-thirtyfour,
   .approach-img-thirtyfive, .approach-img-thirtyseven, .approach-img-forty, .approach-img-thirtyeight, .approach-img-thirtynine,
   .approach-img-fortyone {
     width: 44rem;
   }
 
-  .img-two {
+  #img-two {
     height: 12rem;
   }
 
@@ -3845,7 +3879,7 @@ textarea {
     width: 85rem;
   }
 
-  .approach-img-eleven {
+  #approach-img-eleven {
     width: 65rem;
   }
 
@@ -3926,7 +3960,7 @@ textarea {
     margin-top: 7rem;
   }
 
-  .api-vs-fetchcomp, .img-two {
+  #api-vs-fetchcomp, #img-two {
     width: 80rem;
   }
 
@@ -4340,10 +4374,16 @@ textarea {
   width: 0rem;
   margin-top: 36rem;
   margin-bottom: 18rem;
+  margin-left: 26rem;
 }
 
+.approach-imgs-seven-eight .image #img-seven {
+  width: 60rem;
+}
 
-
+.approach-items-seven-eight p {
+  margin: auto 8rem;
+}
 
 @keyframes sky-color-change {
     0% {
@@ -4368,7 +4408,7 @@ textarea {
 }
 
 .approach-imgs-three-five,
-.approach-img-ten, .approach-items-sixteen { 
+#approach-img-ten, .approach-items-sixteen { 
   width: 100%;
   height: 5rem;
   justify-self: center;
@@ -4380,13 +4420,13 @@ textarea {
   justify-self: center;
 }
 
-.approach-items-nine-eleven .approach-img-nine {
+.approach-items-nine-eleven #approach-img-nine {
   width: 65rem;
   height: 37rem;
   justify-self: center;
 }
 
-.img-three {
+#img-three {
   width: 80rem;
   height: 10rem;
   justify-self: center;
@@ -4398,18 +4438,18 @@ textarea {
   justify-self: center;
 }
 
-.img-five {
+#img-five {
   height: 15rem;
   width: 80rem;
 }
 
-.img-four {
+#img-four {
   width: 80rem;
   height: 18rem;
   justify-self: center;
 }
 
- .img-twelve {
+ #img-twelve {
   width: 70rem;
   margin-top: 0rem;
 }
@@ -4423,11 +4463,15 @@ textarea {
   margin-top: 1rem;
 }
 
-.approach-img-ten {
-  width: 60%;
+#approach-img-ten {
+  width: 100%;
 }
 
-.img-seven {
+#img-eight {
+  width: 60rem;
+}
+
+#img-seven {
   margin-top: 25rem;
 }
 
@@ -4459,22 +4503,21 @@ approach-items-seven-eight p, .approach-item-six p {
 }
 
 .approach-imgs-nine-eleven p {
-  margin: 1rem 21rem;
+  margin: 0rem 23rem 1rem 23rem;
   font-size: 1rem;
 }
 
-.approach-img-nine {
+#approach-img-nine {
   height: 34rem;
   width: 66rem;
 }
 
-.img-seven {
+#img-seven {
   margin-left: 22rem;
 }
 
 .approach-imgs-seven-eight .image p {
-  width: 55rem;
-  margin-left: 27rem;
+  width: 60rem;
 }
 
 .duration p, .conclusion p {
@@ -4482,18 +4525,19 @@ approach-items-seven-eight p, .approach-item-six p {
 }
 
 
-.img-eight {
+#img-eight {
   margin-left: 22rem;
 }
 
 
 
-.img-twelve {
+#img-twelve {
   width: 55rem;
 }
 
 #final-approach p, #localStorage p {
   margin-top: 5rem;
+  margin-bottom: 1rem;
 }
 
 #wrap p {
@@ -4501,7 +4545,7 @@ approach-items-seven-eight p, .approach-item-six p {
 }
 
 #localStorage .image p {
-  margin-top: 0.5rem;
+  margin-top: 0rem;
 }
 
 
